# Travel-Agent-MCP-Server

./: Dockerfile  README.md  apiService.py  enumType.py  main.py  pyproject.toml  requirements.txt  smithery.yaml
flight_mcp_server/: README.md  config.py  enums.py  flights_data.csv  flights_data.json  main.py  models.py  pyproject.toml  requirements.txt  scrapper.py  utils.py
serp_mcp_server/: .gitignore  README.md  main.py
travel-telegram-mcp-bot/: .env  config.py  debug_airbnb_page.html  flights_data.csv  flights_data.json  gemini_client.py  main.py  mcp_client.py  mcp_server_config.py  no_results_page.html  prompt.py  pyproject.toml  requirements.txt  telegram_bot.py  utils.py
