[project]
name = "travel-telegram-mcp-bot"
version = "0.1.0"
description = "A Telegram bot leveraging Generative AI and MCP Client to provide travel agent services by interacting with modular MCP servers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "bs4>=0.0.2",
    "google-genai>=1.21.1",
    "google-generativeai>=0.8.5",
    "mcp-flight-search>=0.2.1",
    "mcp[cli]>=1.9.4",
    "openai>=1.88.0",
    "pandas>=2.3.0",
    "playwright>=1.53.0",
    "pylatex>=1.4.2",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.1",
]
